Transparent 3D viewport issue #102994
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#102994
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux-5.19.0-26-generic-x86_64-with-glibc2.36 64 Bits
Graphics card: NV167 nouveau 4.3 (Core Profile) Mesa 22.2.1
Blender Version
Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash:
a95bf1ac01
Worked: (newest version of Blender that worked as expected)
Short description of error
[Please fill out a short description of the error here]
Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]
Hello I would like to report a problem of transparency of 3D and timeline views.
Capture vidéo du 2022-12-07 21-06-25.webm
#103483 was marked as duplicate of this issue
#103152 was marked as duplicate of this issue
Added subscriber: @matthieu-4
Thanks.
Added subscriber: @iss
Changed status from 'Needs Triage' to: 'Needs User Info'
Seems to be an issue with GPU driver. Can you check if this happens with official Nvidia driver? I am not sure whether we do support unofficial drivers. Also please provide model of your GPU.
Added subscriber: @Kply09
Added subscribers: @Laurent-1, @sanzoghenzo
hi all
This problem is not present on the blender 3.3.2,
bf24652e38
2022 12-06 18:19 master.hi, I'm using blender 3.4.0 on Fedora 37 on an XPS 15 9650 with Nvidia Optimus/Intel grahics. The issue shows up when using the Nouveau drivers, and disappears if I start blender with the intel graphics card.
UPDATE: installing nvidia drivers fixes the issue.
Changed status from 'Needs User Info' to: 'Archived'
I did not get confirmaton from OP, so will go with info from @sanzoghenzo and close this report, since this is driver issue.
I wanted to add that I experienced the same issue on my own Wayland compositor for a short while and it was incredibly cool (this was using AMD builtin drivers btw) and I kinda want it back... well aware this is like spacebar heating but still would be a neat option for those with window transparency blur or similar.
The lighting appears to match up as I was using the same HDRI for my 3D wayland compositor and in the preview, it looks like it's a part of the environment :D
Unfortunately as of version 3.5 (I think) this doesn't happen anymore. I can get more information if the blender devs want to look into it!
I got a ping about this over on the Mesa side (https://gitlab.freedesktop.org/mesa/mesa/-/issues/11007). This reproduces on not only nouveau drivers but also with Zink+ANV. Digging into things with GDB, I believe what's going on here is that Intel supports XBGR2101010 in hardware but NVIDIA does and neither does Zink because there is no such Vulkan format. As a result, Blender is hitting the RGBA display path which enables transparency. This isn't an issue on NVIDIA probably because of a different EGL config heuristic. It's not an issue on X11 because X has no transparency by default. (You can only get at it by extra compositor extensions which few apps use.)
In any case, the solution appears simple: Check for the EGL_EXT_present_opaque extension and set
EGL_PRESENT_OPAQUE
in your attribute list.@iss Maybe this can be reopened?
I can confirm this issue on Arch with Blender 4.1.1 with the latest Mesa drivers 24.1.3.
As I mentioned at https://gitlab.freedesktop.org/mesa/mesa/-/issues/11007#note_2483247:
Wayland + Nouveau GL: Transparent unwanted background
Wayland + Zink + NVK: Transparent unwanted background (via 'MESA_LOADER_DRIVER_OVERRIDE=zink blender')
X11 + Nouveau GL: Works (via 'WAYLAND_DISPLAY="" blender')
X11 + Zink + NVK: Works (via 'WAYLAND_DISPLAY="" MESA_LOADER_DRIVER_OVERRIDE=zink blender')
Seamless 3D view issueto Transparent 3D viewport issueSure, will poke @Jeroen-Bakker to check this, since proposed solution sounds simple.
Isn't #111314 this related?
That seems to be likely.
Thanks @Faith-Ekstrand I will prepare a patch and have a test build ready later today!
At https://builder.blender.org/download/patch/PR124395/ a build will be available (soon) with the potential fix. We would like feedback if the fix works!
@gonsolo it will be available on this link https://builder.blender.org/download/patch/PR124395/
Linux build is missing indeed
It's there now.
The fix works partially:
Wayland + Nouveau GL: Works now.
Wayland + Zink + NVK: Still doesn't work. Transparent unwanted background (via 'MESA_LOADER_DRIVER_OVERRIDE=zink blender')
Unfortunately I can't test with native Vulkan as '--gpu-backend' only supports 'opengl' in the patch build.
We can try to reduce the strictness of the patch. The current patch is quite strict.
A new build is being made. Make sure that you download the version with a SHA starting with
e009
.I expect it to be there in an hour.
The build is there!
I don't see anything new under https://builder.blender.org/download/patch/PR124395.
There is a Linux build from 14:23 with "e009" in the filename, the contents of the sha256 file (also with e009 in the name) starts with "ed855". Is that the build you mean?
Anyway, that one doesn't work with Zink.
Ok, think you tested with the new build, I will have a look at setting up Zink here for testing.
I also tried the latest alpha build with "--gpu-backend vulkan" which works. opengl backend doesn't (as expected).
For me it is as simple as "MESA_LOADER_DRIVER_OVERRIDE=zink ./blender".
But I'm on Arch where the mesa package includes /usr/lib/dri/zink_dri.so, on Debian it's in libgl1-mesa-dri.
Also, zink support is secondary I believe, the important ones are GL (for now) and Vulkan (in the future).
(And Cycles render devices under Nouveau/NVK, of course 😉)
Reopened to check if mesa-zink situation can be improved.
I will still test and create a new issue if zink isn’t yet working.
edit:
after testing I get errors as my configuration doesn't support DRI3 and zink cannot be loaded. Searching for this errors it might not be supported in wayland. I will keep this in mind, but will not create a ticket for zink at this moment.
I dug in some more today and also found a Zink bug causing us to ignore
EGL_EXT_present_opaque
. With that fixed and the blender fix, I think we should be good to go: https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/30133 I haven't tested the combination yet, though.I've tested a brand new blender build with Zink and everything seems to be working with that Mesa MR.